--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
