--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3"
+    "react-hook-form": "^7.44.3",
+    "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
