--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-jwt": "^1.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-toastify": "^9.1.3"
