--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-jwt": "^1.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
+    "react-select": "^5.7.3",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
