--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sharp": "^0.32.1"
   }
 }
