--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
+    "razorpay": "^2.8.6",
     "sharp": "^0.32.1"
   }
 }
