--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-image-magnify": "^2.7.4",
     "react-jwt": "^1.2.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.7",
